@@ -590,6 +590,12 @@ check_header stdbool.h
 
 check_header libgen.h
 
+#
+# unistd.h check
+#
+
+check_header unistd.h
+
 
 ###################
 # check functions #
@@ -638,14 +644,16 @@ check_header_function ctype.h isblank
 check_header_function unistd.h mkstemps
 
 #
+# setegid() check
+#
+
+check_header_function unistd.h setegid
+
+#
 # seteuid() check
 #
 
-if check_header_function unistd.h seteuid; then
-	PS_FLAGS=""
-else
-	PS_FLAGS="-DWITHOUT_FORK"
-fi
+check_header_function unistd.h seteuid
 
 #
 # dirname() check
@@ -679,7 +687,7 @@ fi
 ########################################################################
 
 mkf_sed 'configure_input' "Generated by pmkcfg.sh"
-mkf_sed 'CFLAGS' "$CFLAGS $PS_FLAGS"
+mkf_sed 'CFLAGS' "$CFLAGS"
 mkf_sed 'CLDFLAGS' "$CLDFLAGS"
 mkf_sed 'LIBS' "$LGEN_FLAGS $LM_FLAGS"
 
